<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.roverclone.ui.Home.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_request"
        android:name="com.example.roverclone.ui.Home.ui.request.MyRequestFragment"
        android:label="@string/my_request"
        tools:layout="@layout/fragment_my_request" />

    <fragment
        android:id="@+id/nav_my_favourite"
        android:name="com.example.roverclone.ui.Home.ui.favourite.MyFavouriteFragment"
        android:label="@string/my_fav"
        tools:layout="@layout/fragment_my_favourite" />

    <fragment
        android:id="@+id/faqFragment"
        android:name="com.example.roverclone.ui.Home.ui.faq.FaqFragment"
        android:label="fragment_faq"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/manageCardFragment"
        android:name="com.example.roverclone.ui.Home.ui.manageCard.ManageCardFragment"
        android:label="fragment_manage_card"
        tools:layout="@layout/fragment_manage_card" />

</navigation>
