<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offwhite"
    android:padding="@dimen/_32dp"
    tools:context=".ui.Auth.VerifyActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/verify_otp_msg"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter OTP"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/enteredOtp"
                app:layout_constraintStart_toStartOf="@+id/enteredOtp"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

            <com.chaos.view.PinView
                android:id="@+id/enteredOtp"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:cursorVisible="true"
                android:inputType="numberPassword"
                android:padding="@dimen/_16dp"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cursorColor="@color/green"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="false"
                app:itemCount="6"
                app:itemHeight="48dp"
                app:itemRadius="4dp"
                app:itemSpacing="0dp"
                app:itemWidth="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_otp"
                app:lineColor="@color/light_gray"
                app:lineWidth="2dp"
                app:viewType="rectangle" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/resendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:layout_marginTop="@dimen/_16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enteredOtp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/login_with_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enteredOtp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32dp"
                android:layout_marginBottom="@dimen/_16dp"
                android:padding="8dp"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resendOtp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>